ajout d'une ligne de commande pour la suppression

--- a/README
+++ b/README
@@ -1,3 +1,13 @@
+# Executer pour lancer le site web :
+python app.py ou flask run
+
+# Pour mettre à jour les traductions ou ajouter une nouvelle langue ou de nouveau textes :
+
 pybabel compile -d translations
 
-python app.py
+# Pour supprimer une entrée dans le site web :
+
+[modelname] : nom du modèle
+[table] : neutral ou gendered
+
+"python removedb.py [modelname] [table]"
