--- a/translations/en/LC_MESSAGES/messages.po
+++ b/translations/en/LC_MESSAGES/messages.po
@@ -45,7 +45,7 @@ msgstr "About Us"
 # --------------------------------------HOME------------------------------------------
 
 msgid "titre_menu"
-msgstr "Welcome to Masculead, an interactive leaderboard"
+msgstr "Evaluate the gender bias of your language models"
 
 msgid "home_lead"
 msgstr "This website allows you to evaluate <b>gender biases</b> of language models for <b>French</b> texts, using the GenderGap and/or GenderShift metrics. The computed results can then be added to <i>MascuLead</i>, our leaderboard!"
@@ -60,7 +60,7 @@ msgid "2nd"
 msgstr "2nd Step: Automatically annotate the generations"
 
 msgid "2nd_step"
-msgstr "You can either go to the Upload page, put your generations file and select "no" for the annotation question. After some time, you will get the bias metrics. Otherwise, you can run the <a href="https://github.com/FannyDucel/GenderBiasCoverLetter/blob/main/src/gender_detection_fr.py">gender detection script</a> yourself, and upload the annotated generation file, selecting "yes" to the annotation question to get the metrics."
+msgstr "You can either go to the Upload page, put your generations file and select "no" for the annotation question. After some time, you will get the bias metrics. Otherwise, you can run the <a href="https://github.com/FannyDucel/GenderBiasCoverLetter/blob/main/src/gender_detection_fr.py">gender detection script</a> yourself, and upload the annotated generation file, selecting "yes" to the annotation question to get the metrics. You can also manually annotate the generations, but respecting <a href='https://github.com/FannyDucel/GenderBiasCoverLetter/blob/main/annotated_texts/FR/neutral/annotated-coverletter_neutral_fr_bloom-3b.csv'>the CSV format</a> that's used in the framework."
 
 msgid "btn_upload"
 msgstr "Upload your csv"
@@ -69,7 +69,7 @@ msgid "3rd"
 msgstr "3rd Step: Compare your results"
 
 msgid "3rd_step"
-msgstr "Now you can check your results in the leaderboard. To add your results in the global leaderboard, you will need to add your results from the gendered csv file and the neutral csv file."
+msgstr "Now you can check your results in the leaderboard. To add your results in the global leaderboard, you will need to upload both the generations with neutral and gendered prompts."
 
 msgid "see_btn"
 msgstr "See Masculead"
@@ -77,13 +77,13 @@ msgstr "See Masculead"
 # ----------------------Leaderboards----------------------------------
 
 msgid "leaderboard_title_gen"
-msgstr "Gendered Bias Leaderboard"
+msgstr "Bias Leaderboard for Gendered Prompts"
 
 msgid "leaderboard_title_neu"
-msgstr "Neutral Bias Leaderboard"
+msgstr "Bias Leaderboard for Neutral Prompts"
 
 msgid "leaderboard_title_gl"
-msgstr "MascuLead : Global Gendered Bias Leaderboard"
+msgstr "MascuLead: Bias Leaderboard"
 
 msgid "leaderboard_neu_def"
 msgstr "Leaderboard for cover letters that were generated with neutral prompts."
@@ -112,13 +112,13 @@ msgid "loading"
 msgstr "Annotation in progress... Please wait."
 
 msgid "warning"
-msgstr "When the corpus is not annotated, it can take about 20 minutes. Using the framework on your personal device may be faster (<a href="https://github.com/FannyDucel/GenderBiasCoverLetter/blob/main/src/gender_detection_fr.py">gender detection script</a>). <br> Also, please do not leave the page when annotating!"
+msgstr "When the corpus is not annotated, it can take about 20 minutes for about 9k generations. Using the framework on your personal device may be faster (<a href="https://github.com/FannyDucel/GenderBiasCoverLetter/blob/main/src/gender_detection_fr.py">gender detection script</a>). <br> Please do not leave the page when the annotation is ongoing!"
 
 msgid "upload_title"
 msgstr "Evaluate the gender bias of a model"
 
 msgid "label_upload"
-msgstr "Is your corpus already annoted with gender?"
+msgstr "Is your corpus already annotated with gender?"
 
 msgid "yes"
 msgstr "Yes"
@@ -130,7 +130,7 @@ msgid "csv_file"
 msgstr "CSV file"
 
 msgid "type_gen"
-msgstr "Prompts type :"
+msgstr "Prompts type"
 
 msgid "neutre"
 msgstr "Neutral"
@@ -157,15 +157,23 @@ msgid "result"
 msgstr "Results"
 
 msgid "add_to_leaderboard_result"
-msgstr "Your results have been added to the leaderboard !"
+msgstr "Your results have been added to the leaderboard!"
 
+msgid "warning_save_results"
+msgstr "Careful, the results won't be saved anywhere so we advise you to paste them somewhere!"
 #-------------------------FAQS---------------------------------
+msgid "qzero"
+msgstr "How to cite?"
+
+msgid "rzero"
+msgstr "@inproceedings{ducel:ealm, TITLE = {{Introducing MascuLead: the First Gender Bias Leaderboard.}}, AUTHOR = {Ducel, Fanny and Andr{\'e}, Jeffrey and N{\'e}v{\'e}ol, Aur{\'e}lie and Fort, Kar{\"e}n}, URL = {URL à venir.}, BOOKTITLE = {{Ethic and Alignment of (Large Language Models)}}, ADDRESS = {Marseille, France}, VOLUME = {}, PAGES = {}, YEAR = {2025}, MONTH = Jul}"
+
 
 msgid "qun"
 msgstr "What's behind this framework?"
 
 msgid "run"
-msgstr "The framework aims at detecting <b>binary gender bias</b> in <b>French</b>. After generating texts that were written from the first person of singular, such as cover letters, you can upload the CSV file containing the generations. We will perform an automatic gender detection and compute the bias metrics to evaluate the language model that was used. You can use prompts that either contain a gender marker, or do not contain any gender markers (neutral)."
+msgstr "The framework aims at detecting <b>binary gender bias</b> in <b>French</b>. After generating texts that were written from the first person of singular, such as cover letters, you can upload the CSV file containing the generations. We will perform an automatic gender detection and compute the bias metrics to evaluate the language model that was used. You can use prompts that either contain a gender marker (gendered), or do not contain any gender markers (neutral)."
 
 msgid "qdeux"
 msgstr "Gender detection"
