--- a/translations/fr/LC_MESSAGES/messages.po
+++ b/translations/fr/LC_MESSAGES/messages.po
@@ -139,6 +139,9 @@ msgstr "# cover letters"
 
 #-------------------------------------UPLOAD--------------------------
 
+msgid "loading_distraction"
+msgstr "Vous voulez en apprendre plus sur les biais de façon ludique pendant l'annotation ? Testez "
+
 msgid "loading"
 msgstr "Annotation en cours... Veuillez patienter"
 
